# notification-bot

./: .dockerignore  .env.dist  .gitignore  Dockerfile  app.py  pyproject.toml
data/: config.py
handlers/admin/: __init__.py  notification_admin.py  photo_admin.py
handlers/users/: start.py  upsheduler.py
keyboards/inline/: __init__.py  basic_ikeyboard.py
states/: __init__.py  notification.py  photo_sg.py
utils/: notify_admins.py  set_bot_commands.py
utils/db_api/: __init__.py  lessons_db.py  photo_db.py  timetable_db.py  users_db.py
utils/extends/: __init__.py  base.py
