[tool.poetry]
name = "notofication-bot"
version = "0.1.0"
description = "Bot for your group"
authors = ["Alisultanov Dzhamaludin <alisultanovdzh@gmail.com>"]
readme = "README.md"
packages = [{include = "notofication_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = {version = "^3.0.0b7", allow-prereleases = true}
python-dotenv = "^1.0.0"
environs = "^9.5.0"
apscheduler = "^3.10.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
flake8 = "^6.0.0"
pre-commit = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
